tests/expectations/compiler/structs/struct_function_namespace_conflict_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372007]: struct `Foo` shadowed by
    --> compiler-test:8:5
     |
   8 |     function Foo() {}
     |     ^^^^^^^^^^^^^^^^^
"""]
